Multiple Changes to file structure and format.  Fixes, changes to the way data is read at start.

--- a/html/index.html
+++ b/html/index.html
@@ -67,6 +67,9 @@
          <div class="player_display" id="player_2"><div class="secure_player_container"></div></div>
       </div>
     </div>
+    <div id="airdate_screen">
+      <h2 id="airdate_text"></h2>
+    </div>
     <div id="game_intro">
       <div id="intro_h2_container">
         <h2 id="this_is_jeopardy">THIS IS JEOPARDY!<h2>
