update le frontend.

--- a/html/player_field.html
+++ b/html/player_field.html
@@ -4,6 +4,9 @@
 	<title>
 		Player Field
 	</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
 	<link rel="stylesheet" type="text/css" href="../css/style.css" >
 	<link rel="stylesheet" type="text/css" href="../css/input_name.css" >
 	<link rel="stylesheet" href="../node_modules/sweetalert2/dist/sweetalert2.min.css">
@@ -80,7 +83,7 @@
 			</div>
 			<div class = "player_bet_field">
 				<form id="bet_submit" action="">
-		      		<input id="bet_field" autocomplete="off" placeholder="Enter your wager."/><button id="bet_btn">Make Bet</button>
+		      		<input id="bet_field" autocomplete="off" placeholder="Enter your wager."/><button id="bet_btn">Make Wager</button>
 		    	</form>
 			</div>
 			<div class = "player_timer">
@@ -91,6 +94,8 @@
 					<td class="timer_cell_2">&nbsp;</td><td class="timer_cell_3">&nbsp;</td><td class="timer_cell_4">&nbsp;</td><td class="timer_cell_5">&nbsp;</td>
 				</tr>
 				</table>
+			</div>
+			<div class = "player_field_info">
 			</div>
 		</div>
 		<div>
