--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
     <title>Jeopardy!</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css" >
     <link rel="stylesheet" type="text/css" href="../css/game_intro.css" >
